--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -13,7 +13,8 @@
 .sidebar .top .logo {
   font-size: 20px;
   font-weight: bold;
-  color: purple;
+  color: #42ba96;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .sidebar hr {
   height: 0;
@@ -34,14 +35,15 @@
   cursor: pointer;
 }
 .sidebar .center li .icon {
-  font-size: 18px;
-  color: #7451f8;
+  font-size: 28px;
+  color: #42ba96;
 }
 .sidebar .center li span {
-  font-size: 13px;
+  font-size: 20px;
   font-weight: 600;
-  color: #888;
+  color: #000000;
   margin-left: 10px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 /* Color Option (bottom )*/
