--- a/client/src/css/adminscreen.css
+++ b/client/src/css/adminscreen.css
@@ -4,3 +4,12 @@
 .home .homeContainer {
   flex: 8;
 }
+/*scroll bar gizleme*/
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
